detachwindow fix - missing objects detachwindow fix - save camera position add color range on gui fix 2d text overlay z-index fix memory leak with texture as uniform in shaders

--- a/js/src/k3d.css
+++ b/js/src/k3d.css
@@ -27,3 +27,8 @@
 .dg.main.taller-than-window > ul > li:last-child {
     margin-bottom: 20px;
 }
+
+.k3d-target canvas {
+    position: relative;
+    z-index: 10;
+}
